# website-parser

./: .env  .gitignore  Makefile  README.md  pyproject.toml
website-parser/parser/: base.py
website-parser/utils/: get_html.py
website_parser/parser/: base.py  starterstory.py
